test/fail/exceptions/traceback_line.lily
#[
Exception: Test

Traceback:
    from traceback_line.lily:8: in __main__
]#

raise Exception("Test\n")
